modify address and contanct info

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 % This file uses the resume document class (res.cls)
 
 \documentclass{res} 
+\usepackage{hyperref}
+
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 \setlength{\textheight}{9.5in} % increase text height to fit on 1-page 
@@ -11,9 +13,9 @@
 \name{Jingyun Bian\\[12pt]}     % the \\[12pt] adds a blank
 				        % line after name      
 
-\address{\bf  PRESENT ADDRESS\\193 5th Avenue\\Troy, NY 12180\\(518) 274-1234}
-\address{\bf PERMANENT ADDRESS \\ 110 Brant Avenue \\  Upper Saddle
-         River,   NJ 07458 \\  (201) 555-9509}
+\address{\bf ADDRESS\\201, 18 James Street\\Waterloo, ON N2J 2S9\\}
+%\address{\bf Contact\\ cell: (519) 721-7328 \\ email: rayleigh0328@gmail.com\\}
+\address{\bf Contact\\ Cell: (519) 721 - 7328 \\ \href{mailto:rayleigh0328@gmail.com}{rayleigh0328@gmail.com} \\}
                                   
 \begin{resume}
 
