--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 
 \documentclass{res} 
 \usepackage{hyperref}
+\usepackage{multicol}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
@@ -15,72 +16,131 @@
 
 \address{\bf ADDRESS\\201, 18 James Street\\Waterloo, ON N2J 2S9\\}
 %\address{\bf Contact\\ cell: (519) 721-7328 \\ email: rayleigh0328@gmail.com\\}
-\address{\bf Contact\\ Cell: (519) 721 - 7328 \\ \href{mailto:rayleigh0328@gmail.com}{rayleigh0328@gmail.com} \\}
-                                  
+\address{\bf CONTACT\\ Cell: (519) 721 - 7328 \\ \href{mailto:rayleigh0328@gmail.com}{rayleigh0328@gmail.com} \\}
+
+
 \begin{resume}
 
 \section{JOB OBJECTIVE}          
-    A summer position that will use my accounting and computer
-    skills.          
+    A fulltime position that will use my computer skills.          
  
-\section{EDUCATION}          
-    Rensselaer Polytechnic Institute, Troy, NY  \\        
-    Bachelor of Science, Management, May 1990   \\       
-    Concentration in Management Systems       \\   
-    Minors in Computer Science and Economics  \\        
-    G.P.A. 3.3/4.0          
+\section{EDUCATION}
+  \textbf{University of Waterloo, Waterloo, ON} \hfill \emph{Sep. 2014 - Now}
+  \begin{itemize}
+    \item Master of Applied Science (Expected graduation in Aug. 2016) 
+    \item Electrical and Computer Engineering, G.P.A. 86.6/100
+    \item Concentrate on Communications and Information Systems
+  \end{itemize}
 
- 
-\section{EXPERIENCE}
-   \vspace{-0.1in}	
-   \begin{tabbing}
-   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Telefund Associate} \>Rensselaer Fund     \>Fall 1987-Present\\
-                             \>Troy, NY
-   \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
-    Generated alumni and parent support to reduce tuition,          
-    increase scholarship and financial aid funds; averaging 80          
-    percent pledge rate. Top three percent associate.
-   \begin{tabbing}
-   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
-    {\bf Team Programmer} \>Group W Cable, Westinghouse Corp \> ~~~~~~ Summer 1987\\
-                          \>Mahway, NJ
-   \end{tabbing}\vspace{-20pt}
-    Liaison between accounting department and controller,          
-    provided assistance with invoice liabilities after          
-    divestiture of Group W Cable by Westinghouse.
-   \begin{tabbing}%
-   \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions          
-   {\bf Sales Assistant}  \>AP Technical Sales Inc. \> Summers  1985-86\\
-                          \>Palisades Park, NJ
-   \end{tabbing}\vspace{-20pt}
-    Duties included telemarketing, data entry, and invoicing.          
-    Successfully converted catalog inquiries to sales          
-    opportunities by telemarketing program.          
+  \textbf{Nanjing University, Nanjing, Jiangsu, China} \hfill \emph{Sep. 2010 - Jul. 2014}
+  \begin{itemize}
+    \item Bachelor of Science
+    \item Computer Science, Member of "Peak Plan", G.P.A. 4.13/5
+  \end{itemize}          
+
+\section{RELEVANT PROJECT}
+  \begin{enumerate}
+    \item \textbf{Context-free Bipartite Grammar representation of sparse binary matrix} \hfill \emph{in UW}
+    \begin{itemize}
+      \item Use Grammar-based code idea to save the storage of sparse binary matrix
+      \item Define the new concept "Context-free Bipartite grammar" and proposed grammar transform "Iterative Pairing Transform"
+    \end{itemize}
+
+    \item \textbf{Online-judge based fault localization} \hfill \emph{innovation project in NJU}
+    \begin{itemize}
+      \item Build an online-judge website as test oracle
+      \item Use data flow analysis to statistically localize faults in program
+      \item Adjust the suspicions of statement according to user feedback.
+    \end{itemize}
+
+  \end{enumerate}
 
 
-\section{COMPUTER SKILLS}          
-    Extensive knowledge of hardware and software for IBM PC and          
-    MTS. \\         
-    Proficient programming skills in COBOL, WATFIV (FORTRAN), and          
-    BASIC.          
+\section{PROGRAMMING LANGUAGE AND TOOLS}
+  \begin{multicols}{3}
+    \begin{enumerate}
+      \item C/C++, Java, Pascal
+      \item Python, PHP, JavaScript
+      \item Matlab
+      \item Shell Script, Makefile
+      \item XML, HTML, CSS
+      \item Windows, Linux
+      \item Git, Perforce
+      \item Eclipse, Visual Studio
+    \end{enumerate}
+  \end{multicols}
+
+\section{CONTESTS}
+\begin{itemize}
+\item 2013 ACM/ICPC Asia Changsha Regional Contest: Silver Medal
+\item 2012 ACM/ICPC Asia Changchun and Jinhua Regional Contest: Bronze Medal
+\item 2011 ACM/ICPC Asia Fuzhou and Beijing Regional Contest: Bronze Medal
+\end{itemize}
+
+
+\section{HONORS AND AWARDS}
+\begin{itemize}
+\item University of Waterloo Graduate Scholarship (Winter 2015 in UW)
+\item International Masters Student Award (Every term in UW)
+\item Peak Plan Scholarship (2012, 2013 in NJU)
+\end{itemize}
+
+\section{EXTRACURRICULAR ACTIVITIES}
+\begin{itemize}
+\item Minister of academic section in student union of CS department in NJU
+\item Co-funder of Alibaba Technology Association of Nanjing University
+\end{itemize}
+
+% \section{EXPERIENCE}
+%    \vspace{-0.1in}	
+%    \begin{tabbing}
+%    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
+%     {\bf Telefund Associate} \>Rensselaer Fund     \>Fall 1987-Present\\
+%                              \>Troy, NY
+%    \end{tabbing}\vspace{-20pt}      % suppress blank line after tabbing
+%     Generated alumni and parent support to reduce tuition,          
+%     increase scholarship and financial aid funds; averaging 80          
+%     percent pledge rate. Top three percent associate.
+%    \begin{tabbing}
+%    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions
+%     {\bf Team Programmer} \>Group W Cable, Westinghouse Corp \> ~~~~~~ Summer 1987\\
+%                           \>Mahway, NJ
+%    \end{tabbing}\vspace{-20pt}
+%     Liaison between accounting department and controller,          
+%     provided assistance with invoice liabilities after          
+%     divestiture of Group W Cable by Westinghouse.
+%    \begin{tabbing}%
+%    \hspace{2.3in}\= \hspace{2.6in}\= \kill % set up two tab positions          
+%    {\bf Sales Assistant}  \>AP Technical Sales Inc. \> Summers  1985-86\\
+%                           \>Palisades Park, NJ
+%    \end{tabbing}\vspace{-20pt}
+%     Duties included telemarketing, data entry, and invoicing.          
+%     Successfully converted catalog inquiries to sales          
+%     opportunities by telemarketing program.          
+
+
+% \section{COMPUTER SKILLS}          
+%     Extensive knowledge of hardware and software for IBM PC and          
+%     MTS. \\         
+%     Proficient programming skills in COBOL, WATFIV (FORTRAN), and          
+%     BASIC.          
  
  
-\section{HONORS AND AWARDS}          
-    Epsilon Delta Sigma: Honorary Management Society at          
-    Rensselaer    \\      
-    Dean's List of Distinguished Students: Fall 1986-Spring 1988  \\        
-    National Honor Society: Northern Highlands High School  \\        
-    Creative Essay Award: Northern Highlands High School  \\        
-    Meritorious Action Life Saving Award: Boy Scouts of America          
+% \section{HONORS AND AWARDS}          
+%     Epsilon Delta Sigma: Honorary Management Society at          
+%     Rensselaer    \\      
+%     Dean's List of Distinguished Students: Fall 1986-Spring 1988  \\        
+%     National Honor Society: Northern Highlands High School  \\        
+%     Creative Essay Award: Northern Highlands High School  \\        
+%     Meritorious Action Life Saving Award: Boy Scouts of America          
  
-\section{EXTRACURRICULAR ACTIVITIES}          
-    Epsilon Delta Sigma Public Relations Committee \\         
-    Rensselaer Ski Club     \\     
-    Bergen County Task Force Student Liaison 1986  \\        
-    LEADD (Legislators and Educators Against Drunk Driving) Chairman
-     1985-86  \\        
-    Youth Group - Temple Beth Or Activities Chairman 1985-86          
+% \section{EXTRACURRICULAR ACTIVITIES}          
+%     Epsilon Delta Sigma Public Relations Committee \\         
+%     Rensselaer Ski Club     \\     
+%     Bergen County Task Force Student Liaison 1986  \\        
+%     LEADD (Legislators and Educators Against Drunk Driving) Chairman
+%      1985-86  \\        
+%     Youth Group - Temple Beth Or Activities Chairman 1985-86          
  
 \end{resume}
 \end{document}
