new version of resume is in refined.tex

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \section{EDUCATION}
   \textbf{University of Waterloo, Waterloo, ON} \hfill \emph{Sep. 2014 - Now}
   \begin{itemize}
-    \item Master of Applied Science (Expected graduation in Aug. 2016) 
+    \item Master of Applied Science (Expected graduation in Sep. 2016) 
     \item Electrical and Computer Engineering, G.P.A. 86.6/100
     \item Concentrate on Communications and Information Systems
   \end{itemize}
@@ -35,15 +35,15 @@
   \textbf{Nanjing University, Nanjing, Jiangsu, China} \hfill \emph{Sep. 2010 - Jul. 2014}
   \begin{itemize}
     \item Bachelor of Science
-    \item Computer Science, Member of "Peak Plan", G.P.A. 4.13/5
+    \item Computer Science, Member of ``Peak Plan'', G.P.A. 4.13/5
   \end{itemize}          
 
-\section{RELEVANT PROJECT}
+\section{RELEVANT PROJECT AND PUBLICATION}
   \begin{enumerate}
     \item \textbf{Context-free Bipartite Grammar representation of sparse binary matrix} \hfill \emph{in UW}
     \begin{itemize}
-      \item Use Grammar-based code idea to save the storage of sparse binary matrix
-      \item Define the new concept "Context-free Bipartite grammar" and proposed grammar transform "Iterative Pairing Transform"
+      \item Define the new concept ``Context-free Bipartite grammar'' to represent binary matrix and proposed grammar transform ``Iterative Pairing Transform''.
+      \item En-hui Yang, Jingyun Bian, ``Bipartite Grammar-Based Representations of Large Sparse Binary Matrices: Framework and Transforms'', ISITA, Monterey, California, 2016. 
     \end{itemize}
 
     \item \textbf{Online-judge based fault localization} \hfill \emph{innovation project in NJU}
