--- a/refined.tex
+++ b/refined.tex
@@ -32,7 +32,7 @@
 		\item 	Proficient in C/C$^{++}$, Java, Pascal, Python, PHP, Javascript, XML, HTML, CSS, Shell Scripting, 			Makefile, Git, Matlab.
 		\item 	Experienced with Mac OS, Windows, Linux, \LaTeX\  and Microsoft Office suite.
 		\item 	Knowledge about Information Theory and solid mathmatical background.
-		\item 	Communication and problem solving skills developed through past research and teaching experience.
+		\item 	Communication and problem solving skills developed through past research and teaching.
 	\end{asparaitem}
 %=======================================================================================	
 
