add centro experience

--- a/refined.tex
+++ b/refined.tex
@@ -18,9 +18,9 @@
 \name{Jingyun Bian\\[12pt]}     % the \\[12pt] adds a blank
 				        % line after name      
 
-\address{\bf ADDRESS\\201, 18 James Street\\Waterloo, ON N2J 2S9\\}
+\address{\bf ADDRESS\\Unit 1902, 4070 Confederation Pkwy\\Mississauga, ON. L5B 0E9\\}
 %\address{\bf Contact\\ cell: (519) 721-7328 \\ email: rayleigh0328@gmail.com\\}
-\address{\bf CONTACT\\ Cell: (519) 721 - 7328 \\ \href{mailto:j4bian@uwaterloo.ca}{j4bian{\fontfamily{ptm}\selectfont @}uwaterloo.ca} \\}
+\address{\bf CONTACT\\ Cell: (519) 721 - 7328 \\ \href{mailto:j4bian@uwaterloo.ca}{rayleigh0328{\fontfamily{ptm}\selectfont @}gmail.com} \\}
 
 \begin{resume}
 
@@ -28,9 +28,9 @@
 \parsp
 \section{SUMMARY OF QUALIFICATION}
 	\begin{asparaitem}
-		\item 	Proficient in C/C$^{++}$, Java, Pascal, Python, PHP, Javascript, XML, HTML, CSS, Shell Scripting, Makefile, Git, Matlab, Mac OS, Windows, Linux, \LaTeX\  and Microsoft Office suite.
-		\item 	Knowledge about Information Theory and solid mathmatical background.
-		\item 	Communication and problem solving skills developed through past research and teaching.
+		\item 	Proficient in Java, Maven, Bash, Git, Vim, C/C$^{++}$, Makefile, \LaTeX, Pascal, Matlab, Python, PHP, Javascript, HTML, CSS, SQL, Hadoop(Oozie, Yarn, spark, Zookeeper, Kafka, Impala, Hive, Hdfs), Jenkins, Redis, Elasticsearch.
+		\item 	Knowledge about information theory, machine learning.
+		\item 	Communication and problem solving skills developed through researching, teaching and working.
 	\end{asparaitem}
 %=======================================================================================	
 
@@ -39,34 +39,38 @@
 \parsp
 \section{EXPERIENCE}
 \begin{asparaitem}
+	\item Software engineer in test, Centro, 2016 - 
+		\begin{asparaitem}
+			\additemindent
+			\item Design and implement tests for multiple teams
+			\begin{asparaitem}
+				\additemindent
+				\item Backend: rule-based-optimization (job and API), inventory-planner job
+				\item BD: kafka-ingest, evpump, batch-aggregation, scrubber, discrepancy-finder, audit-stats, schemas
+				\item BI: change-capture, org-pipeline, platform integration, int-bi, int-di, schemas
+			\end{asparaitem}
+		\end{asparaitem}
+
 	\item Research Assistant, Electrical and Computer Engineering, University of Waterloo, 2015 - 2016
 		\begin{asparaitem}
 			\additemindent
 			\item Research Project: Bipartite Grammar-Based Representations of Large Sparse Binary Matrices.
 			\item Supervisor: Prof. En-hui Yang. 
-			\item Proposed and implemented BCFG and IPT in C$^{++}$ then compared with other representations.
 		\end{asparaitem}
 
 	\item Teaching Assistant, Electrical and Computer Engineering, University of Waterloo, 2015 - 2016
 		\begin{asparaitem}
 			\additemindent
-			\item ECE 150(Fundamentals of Programming): Fall 2015.
-			\item ECE 250(Algorithms and Data Structures): Winter 2015.
-			\item ECE 351(Compilers): Spring 2015, Winter 2016, Spring 2016.
+			\item Courses: Fundamentals of Programming, Algorithms and Data Structures, Compilers
 		\end{asparaitem}
 
 	\item Undergraduate Research Assistant, Computer Science and Technology, Nanjing University, 2013
 		\begin{asparaitem}
 			\additemindent
-			\item Research Project: Online-judge Based Fault Localization System.
-			\item Supervisor: Lin Chen.
-			\item Built an online-judge website as test oracle, used statistic method to derive statement suspision.
-			\item Utilized user's feedback to refine the suspision.
+			\item Project: Online-judge Based Fault Localization System, supervised by: Lin Chen.
 		\end{asparaitem}
-	
-	% \item Supervisor: Prof. En-hui Yang
-	\item Minister of academic section of CS department's student union, Nanjing University, 2010 - 2011
 	\item Co-funder of Alibaba Technology Association of Nanjing University, 2013 - 2014
+	\item Minister of academic section of CS department's student union, Nanjing University, 2010 - 2011	
 \end{asparaitem}
 
 %=======================================================================================
@@ -92,6 +96,8 @@
 \section{PROJECT}
 \begin{asparaenum}
 
+	\item Designed and implemented tests for projects stated in the EXPERIENCE section.
+
 	\item Implementation of Context-dependent $2$-D Multi-level Pattern Matching Code, Course Project of \emph{Data Compression}, Winter 2015
 
 	\item Security Analysis and Randomness Test for Lightweight Block Cipher Simon, Course Project of \emph{Computer Network Security}, Winter 2015
@@ -99,16 +105,15 @@
 	\item Emotion Analysis of Tweets, Course Project of \emph{Topics in Computer Software}, Fall 2014
 		\begin{asparaitem}
 			\additemindent
-			\item Utilized Natrual Language Processing Tool(NLTK) in Python and PCA to preprocess Tweets.
+			\item Utilized Python NLTK package and PCA for preprocessing and 
 			\item Applied SVM, C$4.5$, Bayes and Neural Network to compare the classification accuracy.
 		\end{asparaitem}
 
 	\item GRE Vocabulary Memorizing System, \emph{Bachelor Dissertation Project}, 2014
 		\begin{asparaitem}
 			\additemindent
-			\item Applied XAMPP to build the website.
-			\item Applied Bootstrap to make the website mobile friendly.
-			\item Used API to combine the website with Wechat's public platform to allow in-App access.
+			\item Applied XAMPP, Bootstrap to build the website.
+			\item Integrated with wechat API to provide in-App access.
 		\end{asparaitem}
 
 	\item Simple graphic system, Course Project of \emph{Introduction to graphics}, 2013
