--- a/refined.tex
+++ b/refined.tex
@@ -1,3 +1,4 @@
+
 % LaTeX file for resume 
 % This file uses the resume document class (res.cls)
 
@@ -11,7 +12,7 @@
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
-\setlength{\textheight}{9.5in} % increase text height to fit on 1-page 
+\setlength{\textheight}{10in} % increase text height to fit on 1-page 
 
 \begin{document} 
 
@@ -37,40 +38,64 @@
 
 %=======================================================================================
 \parsp
+\section{EDUCATION}
+	\textbf{M.A.Sc, University of Waterloo, Waterloo, ON} \hfill \emph{Sep. 2014- Sep. 2016
+	}
+	\begin{asparaitem}[$\circ$]
+		\additemindent
+		\item Electrical and Computer Engineering, GPA 86.6/100
+		\item Concentrate on Communications and Information Systems
+		% \item Supervisor: Prof. En-hui Yang
+  	\end{asparaitem}
+
+  	\vspace{-0.7\baselineskip}
+
+	\textbf{B.Sc, Nanjing University, Nanjing, Jiangsu, China} \hfill \emph{Sep. 2010 - Jul. 2014}
+	\begin{asparaitem}[$\circ$]
+		\additemindent 
+		\item Computer Science, Member of ``Top Notch Plan'', GPA 4.13/5
+	\end{asparaitem}
+%=======================================================================================
+
+
+
+%=======================================================================================
+\parsp
 \section{EXPERIENCE}
 \begin{asparaitem}
-	\item Software engineer in test, Centro, 2016 - 
+	\item \textbf{Software engineer in test, Centro,} \hfill \emph{Nov. 2016 - Present}
 		\begin{asparaitem}
 			\additemindent
-			\item Design and implement tests for multiple teams
+			\item Design and implement automated tests for multiple teams and projects
 			\begin{asparaitem}
 				\additemindent
-				\item Backend: rule-based-optimization (job and API), inventory-planner job
-				\item BD: kafka-ingest, evpump, batch-aggregation, scrubber, discrepancy-finder, audit-stats, schemas
-				\item BI: change-capture, org-pipeline, platform integration, int-bi, int-di, schemas
+				\item \emph{Big Data}: E2E, batch-aggregation, kafka-ingest, scrubber, evpump-dimension, discrepancy-finder, audit-stats, table schemas
+				\item \emph{API}: rule-based-optimization, bid-multiplier
+				\item \emph{Backend}: rule-based-optimization, inventory-planner, stats consumer 
+				\item \emph{Buisiness Intelligence}: change-capture, org-pipeline, historical-dimensions, schemas
 			\end{asparaitem}
 		\end{asparaitem}
 
-	\item Research Assistant, Electrical and Computer Engineering, University of Waterloo, 2015 - 2016
+	\item \textbf{Research Assistant}, ECE, University of Waterloo, \hfill \emph{Sep. 2014 - Oct. 2016}
 		\begin{asparaitem}
 			\additemindent
 			\item Research Project: Bipartite Grammar-Based Representations of Large Sparse Binary Matrices.
 			\item Supervisor: Prof. En-hui Yang. 
 		\end{asparaitem}
 
-	\item Teaching Assistant, Electrical and Computer Engineering, University of Waterloo, 2015 - 2016
+	\item Teaching Assistant, ECE, University of Waterloo, \hfill \emph{Sep. 2014 - Aug. 2016}
 		\begin{asparaitem}
 			\additemindent
 			\item Courses: Fundamentals of Programming, Algorithms and Data Structures, Compilers
 		\end{asparaitem}
 
-	\item Undergraduate Research Assistant, Computer Science and Technology, Nanjing University, 2013
+	\item Undergraduate Research Assistant, CS, Nanjing University, \hfill \emph{Sep. 2013 - Sep. 2014}
 		\begin{asparaitem}
 			\additemindent
 			\item Project: Online-judge Based Fault Localization System, supervised by: Lin Chen.
 		\end{asparaitem}
-	\item Co-funder of Alibaba Technology Association of Nanjing University, 2013 - 2014
-	\item Minister of academic section of CS department's student union, Nanjing University, 2010 - 2011	
+	\item Co-funder of Alibaba Technology Association of Nanjing University, \hfill \emph{Sep. 2013 - Sep. 2014}
+	% \item Minister of academic section of CS department's student union, Nanjing University, 2010 - 2011	
 \end{asparaitem}
 
 %=======================================================================================
@@ -81,11 +106,11 @@
 \section{PUBLICATION AND CONTEST}
 	\begin{asparaitem}
 		\item En-hui Yang, Jingyun Bian, 
-		``Bipartite Grammar-Based Representations of Large Sparse Binary Matrices: Framework and Transforms'', 
+		\textbf{``Bipartite Grammar-Based Representations of Large Sparse Binary Matrices: Framework and Transforms''}, 
 		\emph{The International Symposium on Information Theory and Its Applications(ISITA)}, 
 		Monterey, California, 
 		2016.
-		\item ACM/ICPC Asian Regional Silver Medal (2013 Changsha), Four Bronze Medals (2012 Changchun, 2012 Jinhua, 2011 Fuzhou, and 2011 Beijing)
+		\item \textbf{ACM/ICPC} Asian Regional Silver Medal (2013 Changsha), Four Bronze Medals (2012 Changchun, 2012 Jinhua, 2011 Fuzhou, and 2011 Beijing)
 		% \item $4$ ACM/ICPC Asian Regional Bronze Medals: 2012 Changchun, 2012 Jinhua, 2011 Fuzhou, and 2011 Beijing.
 	\end{asparaitem}
 %=======================================================================================
@@ -96,34 +121,34 @@
 \section{PROJECT}
 \begin{asparaenum}
 
-	\item Designed and implemented tests for projects stated in the EXPERIENCE section.
+	% \item Designed and implemented testing projects for projects stated in the EXPERIENCE section.
 
-	\item Implementation of Context-dependent $2$-D Multi-level Pattern Matching Code, Course Project of \emph{Data Compression}, Winter 2015
+	\item Implementation of Context-dependent $2$-D Multi-level Pattern Matching Code, Course Project of \emph{Data Compression}, \hfill \emph{Winter 2015}
 
-	\item Security Analysis and Randomness Test for Lightweight Block Cipher Simon, Course Project of \emph{Computer Network Security}, Winter 2015
+	\item Security Analysis and Randomness Test for Lightweight Block Cipher Simon, Course Project of \emph{Computer Network Security}, \hfill \emph{Winter 2015}
 
-	\item Emotion Analysis of Tweets, Course Project of \emph{Topics in Computer Software}, Fall 2014
+	\item Emotion Analysis of Tweets, Course Project of \emph{Topics in Computer Software}, \hfill \emph{Fall 2014}
 		\begin{asparaitem}
 			\additemindent
 			\item Utilized Python NLTK package and PCA for preprocessing and 
 			\item Applied SVM, C$4.5$, Bayes and Neural Network to compare the classification accuracy.
 		\end{asparaitem}
 
-	\item GRE Vocabulary Memorizing System, \emph{Bachelor Dissertation Project}, 2014
+	\item GRE Vocabulary Memorizing System, \emph{Bachelor Dissertation Project}, \hfill \emph{2014}
 		\begin{asparaitem}
 			\additemindent
 			\item Applied XAMPP, Bootstrap to build the website.
 			\item Integrated with wechat API to provide in-App access.
 		\end{asparaitem}
 
-	\item Simple graphic system, Course Project of \emph{Introduction to graphics}, 2013
+	\item Simple graphic system, Course Project of \emph{Introduction to graphics}, \hfill \emph{2013}
 		\begin{asparaitem}
 			\additemindent
 			\item Implemented basic graphic functions using OpenGL in C++ and built a simple GUI. 
 		\end{asparaitem}
 
 	
- 	\item User behavior classification based on cell-phone sensor data, Course Project of \emph{Data Mining}, 2013
+ 	\item User behavior classification based on cell-phone sensor data, Course Project of \emph{Data Mining}, \hfill \emph{2013}
  		\begin{asparaitem}
 			\additemindent
 			\item Used WEKA to do data cleaning and classification. 
@@ -131,25 +156,7 @@
 
 \end{asparaenum}
 
-%=======================================================================================
-\parsp
-\section{EDUCATION}
-	\textbf{Master of Applied Science in University of Waterloo(UW), Waterloo, ON} \hfill \emph{Sep. 2014-}
-	\begin{asparaitem}[$\circ$]
-		\additemindent
-		\item Electrical and Computer Engineering, G.P.A. 86.6/100
-		\item Concentrate on Communications and Information Systems
-		% \item Supervisor: Prof. En-hui Yang
-  	\end{asparaitem}
 
-  	\vspace{-0.7\baselineskip}
-
-	\textbf{Bachelor of Science in Nanjing University, Nanjing, Jiangsu, China}  \emph{Sep. 2010 - Jul. 2014}
-	\begin{asparaitem}[$\circ$]
-		\additemindent 
-		\item Computer Science, Member of ``Top Notch Plan'', G.P.A. 4.13/5
-	\end{asparaitem}
-%=======================================================================================
 
 
 
